[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycgi"
version = "0.0.4"
description = "A Python3 replacement for the deprecated cgi module"
readme = "README.md"
authors = [{ name = "Ronald Aaronson", email = "ronaldaaronson@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["cgi", "replacement"]
dependencies = [
    "python-multipart >= 0.0.6",
]
requires-python = ">=3.7"