[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycgi"
version = "0.0.9"
description = "A Python3 replacement for the deprecated cgi module"
readme = "README.md"
authors = [{ name = "Ronald Aaronson", email = "ronaldaaronson@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["cgi", "replacement"]
dependencies = [
    "python-multipart >= 0.0.20",
]
requires-python = ">=3.8"
[project.urls]
Homepage = "https://github.com/ronaaronson/mycgi"
Changelog = "https://github.com/ronaaronson/mycgi/tags"
Source = "https://github.com/ronaaronson/mycgi"
[tool.setuptools]
license-files = []
